# reductstore

./: .clang-format  .gitbook.yaml  .gitignore  .pre-commit-config.yaml  .trivyignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  CPPLINT.cfg  Cargo.toml  Dockerfile  LICENSE  NOTICE  README.md  SECURITY.md  SUMMARY.md  build.rs  buildx.Dockerfile  codecov.yml  conanfile.txt  conftest.py  deploy.Dockerfile  docker-compose.yml  snapcraft.yaml
backpack_rs/: Cargo.toml  README.md
backpack_rs/src/: backend.rs  error.rs  fs.rs  lib.rs  local_cache.rs
backpack_rs/src/backend/: fs.rs  s3.rs
backpack_rs/src/fs/: file.rs
ext_stub/: Cargo.toml  README.md
ext_stub/src/: lib.rs
reduct_base/: Cargo.toml  README.md
reduct_base/src/: batch.rs  error.rs  ext.rs  extension.rs  io.rs  lib.rs  logger.rs  msg.rs  plugin.rs
reduct_base/src/batch/: encoding.rs  v1.rs  v2.rs
reduct_base/src/ext/: ext_info.rs  ext_settings.rs  process_status.rs
reduct_base/src/io/: records.rs
reduct_base/src/msg/: bucket_api.rs  diagnostics.rs  entry_api.rs  lifecycle_api.rs  query_link_api.rs  replication_api.rs  server_api.rs  status.rs  token_api.rs
reduct_cli/: Cargo.toml
reduct_cli/src/: cmd.rs  config.rs  context.rs  helpers.rs  io.rs  main.rs  parse.rs  parsers.rs  reduct.rs
reduct_cli/src/cmd/: alias.rs  bucket.rs  cp.rs  parsers.rs  replica.rs  server.rs  token.rs
reduct_cli/src/io/: reduct.rs  std.rs
reduct_cli/src/parse/: resource_path.rs  widely_used_args.rs
reduct_cli/src/parsers/: bucket_path.rs  byte_size.rs  quota_type.rs  resource_path.rs
reduct_client/: Cargo.toml  README.md
reduct_client/src/: lib.rs  server_api.rs
reduct_macros/: Cargo.toml  README.md
reduct_macros/src/: lib.rs
reduct_rs/: Cargo.toml  README.md
reduct_rs/examples/: hallo_world.rs  query.rs
reduct_rs/src/: bucket.rs  client.rs  http_client.rs  lib.rs  query.rs  record.rs  replication.rs  server_api.rs
reduct_rs/src/record/: query.rs  read_record.rs  write_batched_records.rs  write_record.rs
reductstore/: Cargo.toml  LICENSE  build.rs  license
reductstore/src/: api.rs  asset.rs  audit.rs  auth.rs  backend.rs  cfg.rs  core.rs  ext.rs  extension.rs  http_api.rs  http_frontend.rs  launcher.rs  lib.rs  license.rs  lifecycle.rs  lock_file.rs  main.rs  replication.rs  storage.rs  syslog.rs  usage.rs
reductstore/src/api/: audit.rs  bucket.rs  components.rs  entry.rs  http.rs  io.rs  limits.rs  links.rs  middleware.rs  query_link.rs  replication.rs  server.rs  token.rs  ui.rs  utils.rs  zenoh.rs
reductstore/src/asset/: asset_manager.rs
reductstore/src/audit/: aggregator.rs  full_access.rs  read_only.rs  repo.rs
reductstore/src/auth/: policy.rs  proto.rs  token_auth.rs  token_repository.rs  token_secret.rs
reductstore/src/backend/: file.rs  fs.rs  noop.rs  remote.rs  s3.rs
reductstore/src/cfg/: audit.rs  bucket.rs  io.rs  lifecycle.rs  limits.rs  lock_file.rs  provision.rs  remote_storage.rs  replication.rs  rw_lock.rs  storage_engine.rs  system_events.rs  thread_pool.rs  token.rs  zenoh.rs
reductstore/src/core/: cache.rs  components.rs  duration.rs  env.rs  fallback_runtime.rs  file_cache.rs  internal_client.rs  logger.rs  payload_codec.rs  sync.rs  thread_pool.rs  weak.rs
reductstore/src/ext/: ext_repository.rs  filter.rs  process_status.rs
reductstore/src/extension/: pipeline.rs
reductstore/src/http_api/: bucket.rs  entry.rs  io.rs  links.rs  middleware.rs  replication.rs  server.rs  token.rs  ui.rs  utils.rs
reductstore/src/http_frontend/: bucket_api.rs  entry_api.rs  middleware.rs  server_api.rs  token_api.rs  ui_api.rs
reductstore/src/lifecycle/: README.md  action.rs  audit.rs  lifecycle_repository.rs  lifecycle_task.rs  system_event_payload.rs
reductstore/src/proto/: auth.proto  remote.proto  replication.proto  storage.proto
reductstore/src/replication/: agent.rs  cfg.rs  diagnostics.rs  engine.rs  proto.rs  remote_bucket.rs  replication.rs  replication_aggregator.rs  replication_repository.rs  replication_sender.rs  replication_task.rs  transaction_filter.rs  transaction_log.rs
reductstore/src/storage/: block_index.rs  block_manager.rs  bucket.rs  doctor.rs  engine.rs  entry.rs  file_cache.rs  folder_browser.rs  folder_keeper.rs  in_flight.rs  lock_file.rs  proto.rs  query.rs  reader.rs  storage.rs  usage.rs  writer.rs
reductstore/src/syslog/: aggregate.rs  capture.rs  event.rs  forward_system_logger.rs  forward_writer.rs  local_system_logger.rs  local_writer.rs  log_capture.rs  path.rs  payload.rs  sink.rs  system_event_logger.rs
reductstore/src/usage/: usage_event_payload.rs  usage_task.rs
rust/: CMakeLists.txt  Cargo.toml  build.rs
rust/src/: asset.rs  auth.rs  core.rs  lib.rs  storage.rs
rust/src/asset/: asset_manager.rs
rust/src/auth/: policy.rs  proto.rs  token_auth.rs  token_repository.rs
rust/src/core/: env.rs  logger.rs  status.rs
rust/src/proto/: auth.proto  storage.proto
rust/src/storage/: block_manager.rs  bucket.rs  entry.rs  proto.rs  query.rs  reader.rs  storage.rs  writer.rs
src/: CMakeLists.txt  config.h.in  console.h.in  http_frontend.rs  lib.rs  main.cc  main.rs  storage.rs
src/asset/: asset_manager.rs
src/auth/: policy.rs  token_auth.rs  token_repository.rs
src/core/: env.rs  logger.rs  status.rs
src/http_frontend/: bucket_api.rs  entry_api.rs  http_server.rs  middleware.rs  server_api.rs  token_api.rs  ui_api.rs
src/http_frontend/bucket_api/: create.rs  get.rs  head.rs  remove.rs  update.rs
src/http_frontend/entry_api/: query.rs  read_batched.rs  read_single.rs  write.rs
src/http_frontend/server_api/: info.rs  list.rs  me.rs
src/http_frontend/token_api/: create.rs  get.rs  list.rs  remove.rs
src/proto/: storage.proto
src/reduct/api/: api.h  api_server.cc  api_server.h  bucket_api.cc  bucket_api.h  callbacks.h  common.cc  common.h  console.cc  console.h  entry_api.cc  entry_api.h  http_server.cc  (+6 more)
src/storage/: block_manager.rs  bucket.rs  entry.rs  proto.rs  query.rs  reader.rs  storage.rs  writer.rs
unit_tests/: CMakeLists.txt  test.cc
unit_tests/reduct/: helpers.h
(+642 files in other folders)
