[package]
name = "reductstore"
version = "1.4.0"
authors = ["Alexey Timin <atimin@reduct.store>"]
edition = "2021"
rust-version = "1.66.0"
license = "MPL-2.0"
description = "ReductStore is a time series database designed specifically for storing and managing large amounts of blob data."
homepage = "https://reduct.store"
documentation = "https://docs.reduct.store"
repository = "https://github.com/reductstore/reductstore"
readme = "README.md"
keywords = ["database", "time-series", "blob", "storage", "reductstore"]
categories = ["database-implementations", "command-line-utilities", "database"]
include = ["src/**/*", "Cargo.toml", "Cargo.lock", "build.rs", "README.md", "LICENSE"]

[lib]
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
chrono = "0.4"
thread-id = "4.0"
zip = "0.6"
tempfile = "3.5.0"
hex = "0.4"
prost = "0.11"
prost-wkt = "0.4"
prost-wkt-types = "0.4"
rand = "0.8"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
regex = "1.7.3"
bytes = "1.0.0-rc.1"
axum = { version = "0.6.18", features = ["default", "headers"] }
tokio = { version = "1.28.0", features = ["full"] }
hyper = { version = "0.14.26", features = ["full"] }
tower = "0.4.12"
futures-util = "0.3.28"
tokio-util = "0.7.8"
axum-server = { version = "0.5.0", features = ["tls-rustls"] }
rustls = "0.21.1"
mime_guess = "2.0.3"

[build-dependencies]
prost-build = "0.11"
prost-wkt-build = "0.4"
http_req = "0.9.1"
chrono = "0.4.24"

[dev-dependencies]
mockall = "0.11.4"
