[workspace]

members = [
    "reductstore",
    "reduct_base",
    "reduct_macros"]

resolver = "2"

[workspace.package]
version = "1.17.6"
authors = ["Alexey Timin <atimin@reduct.store>", "ReductSoftware UG <info@reduct.store>"]
edition = "2021"
rust-version = "1.89.0"


[profile.ci]
inherits = "dev"
opt-level = 0
codegen-units = 256
debug = 1
incremental = true
lto = false
