[package]
name = "reduct-base"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

license = "MPL-2.0"
description = "Base crate for ReductStore"
repository = "https://github.com/reductstore/reduc-rs"
readme = "README.md"
keywords = ["database", "time-series", "blob", "storage", "reductstore"]
categories = ["database"]



[lib]
crate-type = ["lib"]

[features]
default = []
io = ["dep:async-trait", "dep:tokio"]
ext = ["io"]
all = ["io", "ext"]


[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
int-enum = "0.5.0"
chrono = { version = "0.4.40", features = ["serde"] }
url = "2.5.4"
http = "1.2.0"
bytes = "1.10.0"
async-trait = { version =  "0.1.87" , optional = true }
tokio = { version = "1.44.1", optional = true, features = ["default", "rt", "time"] }


[dev-dependencies]
rstest = "0.24.0"
