[package]
name = "reduct-base"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

license = "MPL-2.0"
description = "Base crate for ReductStore"
repository = "https://github.com/reductstore/reduc-rs"
readme = "README.md"
keywords = ["database", "time-series", "blob", "storage", "reductstore"]
categories = ["database"]



[lib]
crate-type = ["lib"]

[features]
default = []
io = ["dep:async-trait", "dep:tokio"]
ext = ["io"]
all = ["io", "ext"]


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
int-enum = "0.5.0"
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
http = "1.2"
bytes = "1.10"
async-trait = { version =  "0.1" , optional = true }
tokio = { version = "1.45", optional = true, features = ["default", "rt", "time"] }
log = "0.4"
thread-id = "5.0"
futures = "0.3"

[dev-dependencies]
rstest = "0.25.0"
