[package]
name = "reduct-base"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

license = "MPL-2.0"
description = "Base crate for ReductStore"
repository = "https://github.com/reductstore/reduc-rs"
readme = "README.md"
keywords = ["database", "time-series", "blob", "storage", "reductstore"]
categories = ["database"]



[lib]
crate-type = ["lib"]

[features]
default = []
io = ["dep:async-trait", "dep:tokio"]
ext = ["io"]
all = ["io", "ext"]


[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.143", features = ["preserve_order"] }
int-enum = "0.5.0"
chrono = { version = "0.4.41", features = ["serde"] }
url = "2.5.4"
http = "1.2.0"
bytes = "1.10.0"
async-trait = { version =  "0.1.89" , optional = true }
tokio = { version = "1.47.1", optional = true, features = ["default", "rt", "time"] }
log = "0.4.0"
thread-id = "5.0.0"
futures = "0.3.31"

[dev-dependencies]
rstest = "0.26.1"
