[package]
name = "reduct_cli"
rust-version = "1.67.0"
version = "0.1.0"
edition = "2021"
description = "A CLI for ReductStore written in Rust"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reduct-rs = { path = "../reduct_rs", version = "1.6.0" }
clap = { version = "4.3.23", features = ["cargo"] }
dirs = "5.0.1"
toml = "0.7.6"
serde = { version = "1.0.183", features = ["derive"] }
anyhow = "1.0.75"
url = { version = "2.4.0", features = ["serde"] }

[dev-dependencies]
rstest = "0.18.2"
tempfile = "3.8.0"
mockall = "0.11.4"
