[package]
name = "reduct-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

description = "A CLI client for ReductStore written in Rust"

[dependencies]
reduct-rs = "1.9.0"
clap = { version = "4.5.1", features = ["cargo"] }
dirs = "5.0.1"
toml = "0.8.10"
serde = { version = "1.0.197", features = ["derive"] }
anyhow = "1.0.79"
url = { version = "2.5.0", features = ["serde"] }
tokio = {version = "1.36.0", features = ["rt-multi-thread"] }
time-humanize = "0.1.3"
bytesize = "1.3.0"
thread-id = "4.2.1"
colored = "2.1.0"
chrono = "0.4.34"
dialoguer = "0.11.0"
futures-util = { version = "0.3.30", features = [] }

[dev-dependencies]
rstest = "0.18.2"
tempfile = "3.10.0"
mockall = "0.12.1"
