[package]
name = "reduct-macros"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

license = "MPL-2.0"
description = "Macros crate for ReductStore"
readme = "README.md"
keywords = ["database", "time-series", "blob", "storage", "reductstore"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.101", features = ["derive"] }
quote = "1.0.40"
