[package]
name = "reduct-rs"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true


license = "MPL-2.0"
description = "ReductStore Client SDK for Rust."
repository = "https://github.com/reductstore/reductstore"
readme = "README.md"
keywords = ["database", "time-series", "client", "sdk", "reductstore"]
categories = ["database"]


[lib]
crate-type = ["lib"]

[dependencies]
reduct-base = { path = "../reduct_base", version = "1.8.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "stream"] }
rustls = "0.21.6"
chrono = { version = "0.4.11", features = ["serde"] }
bytes = "1.4.0"
futures = "0.3.17"
futures-util = "0.3.28"
async-stream = "0.3.5"
async-channel = "1.9.0"
tokio = { version = "1.0", features = ["macros"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["test-util", "rt-multi-thread"] }
rstest = "0.18.1"
