[package]
name = "reductstore"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

license = "BUSL-1.1"
description = "ReductStore is a time series database designed specifically for storing and managing large amounts of blob data."
homepage = "https://reduct.store"
documentation = "https://reduct.store/docs"
repository = "https://github.com/reductstore/reductstore"

keywords = ["database", "time-series", "blob", "storage", "reductstore"]
categories = ["database-implementations", "command-line-utilities", "database"]
include = ["src/**/*", "Cargo.toml", "Cargo.lock", "build.rs", "README.md", "LICENSE"]

[features]
default = ["web-console"]
web-console = []

[lib]
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reduct-base = { path = "../reduct_base", version = "1.11.0" }
reduct-macros = { path = "../reduct_macros", version = "1.11.0" }

log = "0.4.22"
chrono = { version = "0.4.39", features = ["serde"] }
thread-id = "5.0.0"
zip = "2.2.1"
tempfile = "3.14.0"
hex = "0.4.3"
prost = "0.13.1"
prost-wkt = "0.6.0"
prost-wkt-types = "0.6.0"
rand = "0.8.5"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
regex = "1.11.1"
bytes = "1.9.0"
axum = { version = "0.8.1", features = ["default", "macros"] }
axum-extra = { version = "0.10.0", features = ["default", "typed-header"] }
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = "0.7.13"
hyper = { version = "1.5.1", features = ["full"] }
tower = "0.5.2"
futures-util = "0.3.31"
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
mime_guess = "2.0.5"
bytesize = "1.3.0"
async-trait = "0.1.85"
url = { version = "2.5.4", features = ["serde"] }
jsonwebtoken = "9.2.0"
base64 = "0.22.1"
ring = "0.17.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
async-stream = "0.3.6"
tower-http = { version = "0.6.2", features = ["cors"] }
crc64fast = "1.1.0"
rustls = "0.23.21"
byteorder = "1.5.0"
crossbeam-channel = "0.5.14"

[build-dependencies]
prost-build = "0.13.1"
reqwest = { version = "0.12.11", default-features = false, features = ["rustls-tls", "blocking"] }
chrono = "0.4.39"

[dev-dependencies]
mockall = "0.13.1"
rstest = "0.24.0"
serial_test = "3.2.0"

[package.metadata.docs.rs]
no-default-features = true
