[package]
name = "reductstore"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

license = "BUSL-1.1"
description = "ReductStore is a time series database designed specifically for storing and managing large amounts of blob data."
homepage = "https://reduct.store"
documentation = "https://reduct.store/docs"
repository = "https://github.com/reductstore/reductstore"

keywords = ["database", "time-series", "blob", "storage", "reductstore"]
categories = ["database-implementations", "command-line-utilities", "database"]
include = ["src/**/*", "Cargo.toml", "Cargo.lock", "build.rs", "README.md", "LICENSE"]

[features]
default = ["web-console"]
web-console = []
select-ext = []
ros-ext = []

[lib]
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reduct-base = { path = "../reduct_base", version = "1.15.0", features = ["ext"] }
reduct-macros = { path = "../reduct_macros", version = "1.15.0" }

chrono = { version = "0.4.41", features = ["serde"] }
zip = "4.3.0"
tempfile = "3.20.0"
hex = "0.4.3"
prost-wkt-types = "0.7.0"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.143", features = ["preserve_order"] }
regex = "1.11.1"
bytes = "1.10.1"
axum = { version = "0.8.4", features = ["default", "macros"] }
axum-extra = { version = "0.10.0", features = ["default", "typed-header"] }
tokio = { version = "1.47.1", features = ["full"] }
hyper = { version = "1.7.0", features = ["full"] }
futures-util = "0.3.31"
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
mime_guess = "2.0.5"
bytesize = "2.0.1"
async-trait = "0.1.89"
url = { version = "2.5.4", features = ["serde"] }
jsonwebtoken = "9.3.1"
base64 = "0.22.1"
ring = "0.17.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
async-stream = "0.3.6"
tower-http = { version = "0.6.6", features = ["cors"] }
crc64fast = "1.1.0"
rustls = "0.23.31"
byteorder = "1.5.0"
crossbeam-channel = "0.5.15"
dlopen2 = "0.8.0"
log = "0.4"
prost = "0.13.1"

[build-dependencies]
prost-build = "0.13.1"
reqwest = { version = "0.12.23", default-features = false, features = ["rustls-tls", "blocking", "json"] }
chrono = "0.4.41"
serde_json = "1.0.143"

[dev-dependencies]
mockall = "0.13.1"
rstest = "0.26.1"
serial_test = "3.2.0"
test-log = "0.2.18"
reqwest = { version = "0.12.23", default-features = false, features = ["rustls-tls", "blocking"] }
assert_matches = "1.5"

[package.metadata.docs.rs]
no-default-features = true
