[package]
name = "rust_part"
version = "1.4.0"
authors = ["Alexey Timin <atimin@reduct.store>"]
edition = "2021"
rust-version = "1.66.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1.0"
log = "0.4"
chrono = "0.4"
thread-id = "4.0"
zip = "0.6"
tempfile = "3.5.0"
hex = "0.4"
time = "0.3"
prost = "0.11"
prost-wkt = "0.4"
prost-wkt-types = "0.4"
rand = "0.8"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
regex = "1.7.3"

[build-dependencies]
cxx-build = "1.0"
prost-build = "0.11"
prost-wkt-build = "0.4"

[dev-dependencies]
mockall = "0.11.4"

[lib]
crate-type = ["staticlib"]
